[package]
name = "cf-turnstile"
version = "0.2.0"
edition = "2021"
description = "A Rust client for Cloudflare Turnstile"
homepage = "https://github.com/sycertech/cf-turnstile"
repository = "https://github.com/sycertech/cf-turnstile"
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["cloduflare", "turnstile", "recaptcha", "captcha"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = { default-features = false, version = "0.1" }
hyper = { default-features = false, version = "1" }
hyper-util = { default-features = false, features = ["client-legacy", "http1", "http2", "tokio"], version = "0.1.2" }
hyper-rustls = { default-features = false, optional = true, features = ["http1", "http2", "ring"], version = "0.27.3" }
hyper-tls = { default-features = false, optional = true, features = ["alpn"], version = "0.6" }
hyper-hickory = { default-features = false, optional = true, version = "0.7" }
secrecy = "0.8.0"
serde = { default-features = false, features = ["derive"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[features]
default = ["rustls-native-roots"]
idempotency = ["dep:uuid"]
native-tls = ["dep:hyper-tls"]
rustls-native-roots = ["dep:hyper-rustls", "hyper-rustls?/native-tokio"]
rustls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls?/webpki-tokio"]
hickory = ["dep:hyper-hickory"]
integration = ["idempotency"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "test-util", "macros"] }
